Updated slider of hero section and Added typing animation in section two

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="section-one d-none d-sm-block">
             <div class="container">
                 <video autoplay muted id="background-video" style="margin-top: -25px">
-                    <source src="./videos/main-video.mp4" type="video/mp4">
+                    <source src="./videos/customer video full.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
                 <!-- <video autoplay muted id="background-video-2">
@@ -185,25 +185,25 @@
                 </video> -->
                 <div class="section-one-container">
                     <div class="section-one-slider">
-                        <div class="slide" data-start="0" data-end="3">
+                        <div class="slide" data-start="0" data-end="6.5">
                             <h1 id="slide-1">Click.<br>Connect.<br>Close.<br></h1>
                         </div>
-                        <div class="slide" data-start="3" data-end="5">
+                        <div class="slide" data-start="6.5" data-end="10">
                             <h1 id="slide-2">Build your Home<br> from scratch</h1>
                         </div>
-                        <div class="slide" data-start="5" data-end="7">
+                        <div class="slide" data-start="10" data-end="12">
                             <h1 id="slide-3">Convert your<br> Space to Home</h1>
                         </div>
-                        <div class="slide" data-start="7" data-end="9">
+                        <div class="slide" data-start="12" data-end="14">
                             <h1 id="slide-4">Fund Your<br> Dream Home</h1>
                         </div>
-                        <div class="slide" data-start="9" data-end="11">
+                        <div class="slide" data-start="14" data-end="16">
                             <h1 id="slide-5">Legal Aid</h1>
                         </div>
-                        <div class="slide" data-start="11" data-end="13">
+                        <div class="slide" data-start="16" data-end="18">
                             <h1 id="slide-6">Solar Rooftop<br> Installation</h1>
                         </div>
-                        <div class="slide" data-start="13" data-end="15">
+                        <div class="slide" data-start="18" data-end="20">
                             <h1 id="slide-7">Packers & Movers<br> Services</h1>
                         </div>
                     </div>
@@ -211,9 +211,9 @@
                 <div class="section-one-bottom-outer">
                     <div class="section-one-bottom d-flex align-items-center justify-content-between">
                         <p id="section-bottom-text">Revolutionize your real estate experience with seamless,
-                            tech-driven<br> solutions by
+                            tech-driven solutions by
                             Realezi.
-                            From first-time buyers to professional sellers,<br> we make your journey from click to close
+                            From first-time buyers to professional sellers, we make your journey from click to close
                             effortless. </p>
                         <button>Try it yourself</button>
                     </div>
@@ -440,7 +440,7 @@
             </div>
         </div>
 
-        <div class="section-two d-none d-sm-block">
+        <div class="section-two d-none d-sm-block text-center">
             <div class="container">
                 <div class="section-two-nav">
                     <ul>
@@ -451,7 +451,7 @@
                         <li>Contact</li>
                     </ul>
                 </div>
-                <h2>Find Your Best Fit</h2>
+                <h2 class="text-center m-auto" id="typewriter-text">Real Estate Made Easy</h2>
                 <div class="search-container-outer">
                     <div class="toggle-button">
                         <p class="active">Buy</p>
@@ -1757,9 +1757,10 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
     <script defer src="./footer.js"></script>
     <script defer src="./navbar.js"></script>
-    <script src="./background-video.js"></script>
     <script defer src="./section-one-slide-change.js"></script>
     <script defer src="./section-two.js"></script>
     <script defer src="./video-slider.js"></script>
@@ -1767,18 +1768,16 @@
     <script defer src="./box-animation.js"></script>
     <script defer src="./blog-news-section.js"></script>
     <script defer src="./text-scroller.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script> -->
     <!-- <script src="https://unpkg.com/@rive-app/canvas@2.9.1"></script> -->
     <script src="./scripts/rive.js"></script>
     <script src="./scripts/lottiesfiles.js"></script>
+    <script src="./background-video.js"></script>
     <!-- <script defer src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
     <script defer src="./rive-animations.js"></script>
     <script defer src="section-transition.js"></script>
     <script defer src="./mobile-view.js"></script>
     <script defer src="./filter-section.js"></script>
-    <script type="module" src="/main.js"></script>
 </body>
 
 </html>
