Changed heading of Brand section

--- a/index.html
+++ b/index.html
@@ -974,8 +974,7 @@
 
         <div id="section-five" class="section-five d-none d-sm-block">
             <div class="container">
-                <h2>Everyone has questions.<br>
-                    We answer over 1 Million every day.
+                <h2>Top Building Owners, Developers<br> & Channel Partners Trust Realezi
                 </h2>
                 <button>See Customer Stories</button>
                 <div class="animated-boxes-container">
