Changed video in tablet section

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                                                 <div class="color-overlay"></div>
                                                 <video class="tablet-image" width="100%" style="object-fit: cover;"
                                                     autoplay muted loop>
-                                                    <source src="videos/calender video.mp4" type="video/mp4">
+                                                    <source src="videos/calender-video.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
                                             </div>
