--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
                                                 <div class="color-overlay"></div>
                                                 <video class="tablet-image" width="100%" style="object-fit: cover;"
                                                     autoplay muted loop>
-                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    <source src="videos/realezi-passbook.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
                                             </div>
