--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Offside&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <title>Realezi</title>
+    <title>Customer Homepage</title>
 </head>
 
 <body>
