Updated hero section video

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="section-one d-none d-sm-block">
             <div class="container">
                 <video autoplay muted id="background-video" style="margin-top: -25px">
-                    <source src="./videos/customer video full.mp4" type="video/mp4">
+                    <source src="./videos/main-video.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
                 <!-- <video autoplay muted id="background-video-2">
@@ -195,25 +195,25 @@
                 </a>
                 <div class="section-one-container">
                     <div class="section-one-slider">
-                        <div class="slide" data-start="0" data-end="6.5">
+                        <div class="slide" data-start="0" data-end="9">
                             <h1 id="slide-1">Click.<br>Connect.<br>Close.<br></h1>
                         </div>
-                        <div class="slide" data-start="6.5" data-end="10">
+                        <div class="slide" data-start="9" data-end="12">
                             <h1 id="slide-2">Build your Home<br> from scratch</h1>
                         </div>
-                        <div class="slide" data-start="10" data-end="12">
+                        <div class="slide" data-start="12" data-end="14">
                             <h1 id="slide-3">Convert your<br> Space to Home</h1>
                         </div>
-                        <div class="slide" data-start="12" data-end="14">
+                        <div class="slide" data-start="14" data-end="16">
                             <h1 id="slide-4">Fund Your<br> Dream Home</h1>
                         </div>
-                        <div class="slide" data-start="14" data-end="16">
+                        <div class="slide" data-start="16" data-end="18">
                             <h1 id="slide-5">Legal Aid</h1>
                         </div>
-                        <div class="slide" data-start="16" data-end="18">
+                        <div class="slide" data-start="18" data-end="20">
                             <h1 id="slide-6">Solar Rooftop<br> Installation</h1>
                         </div>
-                        <div class="slide" data-start="18" data-end="20">
+                        <div class="slide" data-start="20" data-end="22">
                             <h1 id="slide-7">Packers & Movers<br> Services</h1>
                         </div>
                     </div>
