Updated content and videos

--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
                             <h1 id="slide-4">Fund Your<br> Dream Home</h1>
                         </div>
                         <div class="slide" data-start="16" data-end="18">
-                            <h1 id="slide-5">Legal Aid</h1>
+                            <h1 id="slide-5">From Disputes<br> to Deals</h1>
                         </div>
                         <div class="slide" data-start="18" data-end="20">
-                            <h1 id="slide-6">Solar Rooftop<br> Installation</h1>
+                            <h1 id="slide-6">Empowering Greener<br> Tomorrow</h1>
                         </div>
                         <div class="slide" data-start="20" data-end="22">
-                            <h1 id="slide-7">Packers & Movers<br> Services</h1>
+                            <h1 id="slide-7">Pack.<br>Move.<br>Settle</h1>
                         </div>
                     </div>
 
