Added content in customer review

--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
                             <img src="./images/left-right.png" width="20px" alt="Left Arrow Icon" class="close-filters">
                             <h6 class="mx-2">You’re searching in <span class="fw-medium">Vadodara</span></h6>
                         </div>
-                        <div class="d-flex align-items-center justify-content-end">
+                        <!-- <div class="d-flex align-items-center justify-content-end">
                             <p>Change City</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="search-engine position-relative">
                         <input type="text" name="search" placeholder="Patel Nagar Bus Stop" autocomplete="off">
@@ -1297,7 +1297,8 @@
                     <img src="./images/tools-1.png" alt="Solar Calculator" width="100px">
                     <div class="content text-left">
                         <h4>Solar Calculator</h4>
-                        <p>Calculate your Solar Power hassle-free</p>
+                        <p>Calculate your energy savings and power up your home sustainably
+                        </p>
                     </div>
                 </div>
 
@@ -1305,7 +1306,7 @@
                     <img src="./images/tools-2.png" alt="EMI Calculator" width="90px">
                     <div class="content text-left">
                         <h4>EMI Calculator</h4>
-                        <p>Calculate your Solar Power hassle-free</p>
+                        <p>Easily estimate your solar panel EMI with our quick and reliable calculator</p>
                     </div>
                 </div>
 
@@ -1313,7 +1314,7 @@
                     <img src="./images/tools-3.png" alt="EMI Calculator" width="90px">
                     <div class="content text-left">
                         <h4>Loan Calculator</h4>
-                        <p>Calculate your Solar Power hassle-free</p>
+                        <p>Discover the perfect solar loan plan tailored to your budget</p>
                     </div>
                 </div>
             </div>
@@ -1441,24 +1442,21 @@
                 <h2>Customer Reviews</h2>
                 <a href="#">See all</a>
             </div>
-            <div class="customer-review-slider d-flex justify-content-center">
+            <div class="customer-review-slider d-flex justify-content-start">
                 <div class="customer-review-card">
-                    <img src="./images/ellipse-1.png" alt="" width="60px">
-                    <p>Really one of the best experience of property purchasing. Seamless and hassle-free experience.
-                        Seamless and hassle-free experience.</p>
-                    <p class="fw-semibold">Dr. Ketan Rao</p>
+                    <img src="./images/customer-review-1.png" alt="" width="60px">
+                    <p>Realezi made finding my dream home easy. Everyone was so helpful the entire way</p>
+                    <p class="fw-semibold">Ananya Sharma</p>
                 </div>
                 <div class="customer-review-card">
-                    <img src="./images/ellipse-1.png" alt="" width="60px">
-                    <p>Really one of the best experience of property purchasing. Seamless and hassle-free experience.
-                        Seamless and hassle-free experience.</p>
-                    <p class="fw-semibold">Dr. Ketan Rao</p>
+                    <img src="./images/customer-review-2.png" alt="" width="60px">
+                    <p>⁠I struggled to find the right property, but Realezi’s team took the stress away.</p>
+                    <p class="fw-semibold">Aryan Kapoor</p>
                 </div>
                 <div class="customer-review-card">
-                    <img src="./images/ellipse-1.png" alt="" width="60px">
-                    <p>Really one of the best experience of property purchasing. Seamless and hassle-free experience.
-                        Seamless and hassle-free experience.</p>
-                    <p class="fw-semibold">Dr. Ketan Rao</p>
+                    <img src="./images/customer-review-3.png" alt="" width="60px">
+                    <p>They found me the best property that matched everything I had in mind.</p>
+                    <p class="fw-semibold">Isha Verma</p>
                 </div>
             </div>
         </div>
