Changed instagram video links and tablet video

--- a/index.html
+++ b/index.html
@@ -609,111 +609,111 @@
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C-iC6iLtniX/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzV54jJNh5O/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C0vJn2bIifD/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzQ10m3oFGP/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C7MVWCmtPpN/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzG-fRVyS9c/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C87CirjNaru/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzDo-S9Oada/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C4nxoM9NYs1/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzV54jJNh5O/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C53Zv--LLAa/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzQ10m3oFGP/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C0vJn2bIifD/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzG-fRVyS9c/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C-iC6iLtniX/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzDo-S9Oada/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="video">
                         <div class="instagram-video"
                             style="position: relative; width: 200px; height: 350px; overflow: hidden;border-radius: 15px">
-                            <iframe src="https://www.instagram.com/reel/C0vJn2bIifD/embed" width="300" height="430"
+                            <iframe src="https://www.instagram.com/reel/CzV54jJNh5O/embed" width="300" height="430"
                                 frameborder="0" scrolling="no" allowtransparency="true"
                                 style="position: absolute; top: -70px; left: 52%;transform: translateX(-50%); "></iframe>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-between my-2">
+                        <!-- <div class="d-flex align-items-center justify-content-between my-2">
                             <p>Semi furnished 1 BHK in block 2, Garden Villas</p>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
@@ -919,7 +919,7 @@
                                                 <div class="color-overlay"></div>
                                                 <video class="tablet-image" width="100%" style="object-fit: cover;"
                                                     autoplay muted loop>
-                                                    <source src="videos/one-for-all.mp4" type="video/mp4">
+                                                    <source src="videos/client-privacy.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
                                             </div>
